<resources>
    <string name="app_name">自定义</string>

    <!-- Strings related to login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->
    <string name="action_point">画点</string>
    <string name="action_lines">画线</string>
    <string name="action_rect">矩形</string>
    <string name="action_roundRect">圆角矩形</string>
    <string name="action_oval">椭圆</string>
    <string name="action_circle">画圆</string>
    <string name="action_ring">圆环</string>
    <string name="action_arc">圆弧</string>
    <string name="action_pie">饼状图</string>
    <string name="prompt_url">https://github.com/ggggxiaolong/CustomView</string>
    <string name="action_base">基础图形</string>
    <string name="action_avatar">圆形头像</string>
    <string name="navigation_drawer_open">开启</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="action_bitmap">图片</string>
    <string name="action_path">路径</string>
    <string name="action_trapezoid">漏斗图</string>
    <string name="action_shader">Shader</string>
    <string name="action_polyline">折线</string>

</resources>
