<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_point"
        android:title="@string/action_point"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_lines"
        android:title="@string/action_lines"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_rectangle"
        android:title="@string/action_rect"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_roundRect"
        android:title="@string/action_roundRect"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_oval"
        android:title="@string/action_oval"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_circle"
        android:title="@string/action_circle"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_ring"
        android:title="@string/action_ring"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_arc"
        android:title="@string/action_arc"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_pie"
        android:title="@string/action_pie"
        app:showAsAction="never"
        />
</menu>