<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_base"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_base"/>
        <item
            android:id="@+id/nav_avatar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_avatar"/>
        <item
            android:id="@+id/nav_shader"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_shader"/>
    </group>

    <item android:title="自定义图像">
        <menu>
            <item
                android:id="@+id/nav_circle"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_circle"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
